# personal-website-old

./: next.config.js  package.json
pages/: index.js
src/components/: navbar.tsx
src/pages/: fluid.tsx  index.tsx
wasm/: Cargo.toml
wasm/src/: app_state.rs  common_funcs.rs  fluid.rs  gl_setup.rs  lib.rs  render_gl.rs
wasm/src/programs/: cell.rs  color_2d.rs  mod.rs  pixelmap.rs
wasm/src/render/: mod.rs  renderer.rs  shader.rs
wasm/src/shaders/fragment/: cell.frag  mod.rs  pixelmap.frag
wasm/src/shaders/vertex/: color_2d.vert  mod.rs  pixelmap.vert
wasm/src/util/: gl.rs
