[package]
name = "wasm"
version = "0.1.0"
authors = ["Alex Lin <alexlin247@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.50"
lazy_static = "1.4.0"
nalgebra = "0.26.2"
wasm-bindgen = "0.2.73"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'Window',
]
